[package]
name = "ws_subscription"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
serde = "1.0.217"
solana-client = "2.1.8"
solana-sdk = "2.1.8"
solana-transaction-status-client-types= "2.1.8"
tokio = { version = "1.43.0", features = [ "rt-multi-thread", "macros" ] }
serde_json = "1.0.135"
base64 = "0.22.1"
bincode = "1.3.3"
