[package]
name = "ws_subscription"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
serde = "1.0.217"
solana-client = "2.1.8"
solana-sdk = "2.1.8"
solana-transaction-status-client-types= "2.1.8"
solana-account-decoder = "2.1.10"
tokio = { version = "1.43.0", features = [ "rt-multi-thread", "macros" ] }
serde_json = "1.0.135"
base64 = "0.22.1"
bincode = "1.3.3"
safe-transmute = "0.11.3"
enumflags2 = "0.7.11"
bytemuck = "1.21.0"
anyhow = "1.0.95"
clap = "4.5.27"
async-trait = "0.1.85"
uint = "0.10.0"
